--- a/index.html
+++ b/index.html
@@ -492,14 +492,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/MIOlatunji1" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://twitter.com/web3MIO" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 				
 					<li><a href="https://github.com/mayowaolatunji" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 
 					<li><a href="mailto:mayowaweb3writer@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Mayowatheweb3writer</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Mayowatheweb3writer</li><li>Design: <a href="#">Mayowa</a></li>
 				</ul>
 			</section>
 
